sock-shop-capstone/Kubenetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: capstone.meaxzy.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
